src/objects/SF_CRW__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SF CRWs</relationshipLabel>
        <relationshipName>SF_CRWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionDate__c</fullName>
        <label>ActionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActionId__c</fullName>
        <label>ActionId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignTo__c</fullName>
        <label>AssignTo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boro__c</fullName>
        <defaultValue>&quot;?&quot;</defaultValue>
        <description>Court Boro or intake boro?</description>
        <label>Boro</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Approved_Name__c</fullName>
        <label>CM Approved Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Approved_Name__c</fullName>
        <label>CR Approved Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Coordinator__c</fullName>
        <description>Case coordinator name on contact</description>
        <formula>Contact__r.Case_Coordinator__r.FirstName&amp;&quot; &quot;&amp;Contact__r.Case_Coordinator__r.LastName</formula>
        <label>Case Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <label>ClientName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SF CRWs</relationshipLabel>
        <relationshipName>SF_CRWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CourtDate__c</fullName>
        <label>CourtDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Court_Rep__c</fullName>
        <formula>Contact__r.Court_Rep__r.FirstName&amp;&quot; &quot;&amp;Contact__r.Court_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Court Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Date__c</fullName>
        <description>Day and Date for report</description>
        <formula>RIGHT(text( CourtDate__c),5)&amp;&quot; - &quot;&amp;CASE(MOD( CourtDate__c - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)</formula>
        <label>Day Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_in_CRW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted_in_CRW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocumentDate__c</fullName>
        <label>DocumentDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intk_Boro__c</fullName>
        <description>Not sure if we need intake boro or case boro. This one is the borough on the intake case</description>
        <formula>text(Contact__r.Intake_Case__r.Borough__c)</formula>
        <label>Intk Boro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Narrative__c</fullName>
        <label>Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Id__c</fullName>
        <label>PC Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportType__c</fullName>
        <label>ReportType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_From__c</fullName>
        <label>Report From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_To__c</fullName>
        <label>Report To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SignedBy__c</fullName>
        <label>SignedBy</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advancedFrom__c</fullName>
        <label>advancedFrom</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approval_Status__c</fullName>
        <label>approval Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>narrative_rtf__c</fullName>
        <label>narrative rtf</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>program__c</fullName>
        <label>program</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>repStage__c</fullName>
        <label>repStage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reportPeriod__c</fullName>
        <label>reportPeriod</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_edited_time__c</fullName>
        <description>date-time when report edited</description>
        <label>report edited time</label>
        <type>DateTime</type>
    </fields>
    <label>SF CRW</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CourtDate__c</columns>
        <columns>ClientName__c</columns>
        <columns>Intk_Boro__c</columns>
        <columns>Case_Coordinator__c</columns>
        <columns>AssignTo__c</columns>
        <columns>ReportType__c</columns>
        <columns>SignedBy__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CourtDate__c</field>
            <operation>greaterThan</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>last_3_months</fullName>
        <columns>CourtDate__c</columns>
        <columns>ReportType__c</columns>
        <columns>PC_Id__c</columns>
        <columns>ClientName__c</columns>
        <columns>Intk_Boro__c</columns>
        <columns>Case_Coordinator__c</columns>
        <columns>AssignTo__c</columns>
        <columns>Narrative__c</columns>
        <columns>SignedBy__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CourtDate__c</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>last 3 months</label>
    </listViews>
    <listViews>
        <fullName>next15Days</fullName>
        <columns>CourtDate__c</columns>
        <columns>PC_Id__c</columns>
        <columns>ClientName__c</columns>
        <columns>Intk_Boro__c</columns>
        <columns>Case_Coordinator__c</columns>
        <columns>AssignTo__c</columns>
        <columns>ReportType__c</columns>
        <columns>SignedBy__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CourtDate__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:14</value>
        </filters>
        <filters>
            <field>CourtDate__c</field>
            <operation>lessOrEqual</operation>
        </filters>
        <label>Next 14 Days</label>
    </listViews>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>SF CRW Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF CRWs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>